Fix error in CombatLogManager